# bigint

./: BigInt.cpp  BigInt.h  CMakeLists.txt  calculator  main.cpp  mainwindow.cpp  mainwindow.h  my_calculator
